# hls_integrator

./: .gitignore  .pre-commit-config.yaml  README.md  examples.py  integrator.py  pyproject.toml
cosim/: run.tcl
cosim/files/: block_memory.v  ctrl.sv  hlsi_DUT.v  tb.sv  vadd.v  vadd_test.py
cosim/vadd/: vadd.xpr
doc/: doc.ipynb
doc/log/: dev_log.ipynb
hlsi/: examples.ipynb  examples.py  integrator.py  wrapper.v
log/: dev_log.ipynb
vadd hls/: add.v  ctrl.v  fifo_w32_d8_A.v  load.v  store.v  vadd.v
