[tool.poetry]
name = "hlsi"
version = "0.1.0"
description = "HLSi: HLS ❤️ RTL and SoC system builders"
authors = ["Ed-5100 <xieyutong78@gmail.com>", "RapidStream Design Automation, Inc. <info@rapidstream-da.com>"]
readme = "README.md"

[tool.poetry.dependencies]
click = "^8.1.3"
python = "^3.10"
migen = "^0.9.2"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
coverage = "^7.0.5"
mypy = "^1.0.0"
pre-commit = "^2.20.0"
pytest = "^7.2.0"
pytest-dependency = "^0.5.1"
pytest-xdist = "^3.2.0"
yapf = "^0.32.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
